clusters/tundra/tundra-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tundra-app
  namespace: default
spec:
  selector: { app: tundra-app }
  ports:
    - port: 80
      targetPort: 8080
