clusters/tundra/tundra-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tundra-app
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: <cert-arn-from-module-11>
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    external-dns.alpha.kubernetes.io/hostname: gotundra.net
spec:
  rules:
    - host: gotundra.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tundra-app
                port:
                  number: 80
